test/corpus/implied.txt
==================
Implied Opcodes
==================

nop
Nop
nOp
noP
NOp
nOP
NOP

clc
cld
cli
clv
dex
dey
inx
iny
sec
sed
sei
stp
tax
tay
tsx
txa
txs
tya
wai
---

(source_file
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))

  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
  (operation (implied))
)
