test/corpus/indirect.txt
==================
Indirect
==================

lda (5)
lda (5,x)
lda (%10), y

---

(source_file
  (operation (indirect (num_literal)))
  (operation (indirect (num_literal)))
  (operation (indirect (num_literal)))
)
