test/corpus/relative.txt
==================
Relative Opcodes
==================
bcc
bcs
beq
bmi
bne
bpl
bra
bvc
bvs
---

(source_file
  (operation (relative))
  (operation (relative))
  (operation (relative))
  (operation (relative))
  (operation (relative))
  (operation (relative))
  (operation (relative))
  (operation (relative))
  (operation (relative))
)
