test/corpus/stack.txt
================================================================================
Stack Opcodes
================================================================================

brk
pha
php
phx
phy
pla
plp
plx
ply
rti
rts
--------------------------------------------------------------------------------

(source_file
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode))
  (stack
    (opcode)))
